Добавление времени выполнения запуска
